--- a/lib/messagebundles/tr.po
+++ b/lib/messagebundles/tr.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LimeWire Client\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-12 11:30-0400\n"
-"PO-Revision-Date: 2010-07-05 06:42+0000\n"
+"POT-Creation-Date: 2010-07-19 11:30-0400\n"
+"PO-Revision-Date: 2010-07-15 21:23+0000\n"
 "Last-Translator: Yiğit Ateş <yigitates52@gmail.com>\n"
 "Language-Team: TR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2010-07-13 03:32+0000\n"
+"X-Launchpad-Export-Date: 2010-07-20 03:32+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: components/core-api/src/main/java/org/limewire/core/api/Category.java:14
@@ -2879,7 +2879,7 @@ msgstr[0] ""
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/library/table/DeletionKeyListener.java:66
 msgid "&Move to Recycle Bin"
-msgstr ""
+msgstr "&Geri Dönüşüm Kutusuna Taşı"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/library/table/DeletionKeyListener.java:69
 msgid "Move File to the Trash or Remove from Library"
@@ -3296,9 +3296,6 @@ msgid "&Help"
 msgstr "&Yardım"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/menu/HelpMenu.java:48
-msgid "Get Personalized &Tech Support"
-msgstr "Kişiselleştirilmiş &Teknik Destek Al"
-
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/menu/HelpMenu.java:50
 msgid "&Tech Support"
 msgstr "&Teknik Destek"
